--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,14 +1,19 @@
+* {
+	font-family: 'Rokkitt', serif;
+}
+
 header {
 	background-color: #c8c3cc;
-	height: 100px;
+/*	height: 100px;*/
 	width:100%;
 	position: fixed;
 	top: 0px;
 	border-bottom: 5px solid #563f46;
+	overflow: hidden;
 }
 
 .headbox {
-	height: 46px;
+/*	height: 46px;*/
     width: 20%;
     background-color: #484f4f;
     color: white;
@@ -18,6 +23,8 @@ header {
     margin-top: 0px;
     padding: 27px;
     text-align: center;
+    font-size: 33px;
+    overflow: hidden;
 }
 
 .nav {
@@ -54,29 +61,69 @@ header {
 
 
 .container {
-	background: url('wood.jpg') no-repeat;
+	background: url('../images/wood.jpg') no-repeat;
 	background-size: 100%
 	width: 100%;
 	height: 1000px;
 	margin: auto;
-	margin-top: 105px;
+	margin-top: 90px;
 
 }
 
 .box1 {
 	width: 50%;
-	height: 300px;
-	border: 2px solid black;
+/*	height: 300px;*/
+	border: 2px solid #563f46;
 	float: left;
-	margin: 5% 0 0 5%;
+	margin: 5%;
+	background-color: rgba(255,255,255,0.7);
+	color: #563f46;
+	padding: 5px;
+}
+
+.box1 h1 {
+	margin: 0px auto;
+	text-align: center;
+	font-size: 26px;
+	margin-top:5px;
+}
+
+#profile-pic {
+	height: 300px;
+	width: 300px;
+	display: inline;
+	float: left;
+	padding: 10px;
+}
+
+.box1 p {
+	display: inline;
+	font-size: 20px;
+	padding: 10px;
 }
 
 .box2 {
-	width: 20%;
-	height: 300px;
-	border: 2px solid black;
+	width: 25%;
+/*	height: 200px;*/
+	border: 2px solid #563f46;
 	float: right;
-	margin: 5% 5% 0 0;
+	background-color: rgba(255,255,255,0.7);
+	color: #563f46;
+	float: right;
+	margin: 5%;
+}
+
+.box2 h1 {
+	margin: 0px auto;
+	text-align: center;
+	font-size: 26px;
+	margin-top: 5px;
+}
+
+.icon {
+	display: inline: block;
+	width: 25%;
+	margin: 3.5%;
 }
 
 footer {
@@ -84,4 +131,10 @@ footer {
 	height: 50px;
 	width: 100%;
 	border-top: 3px solid #563f46;
+}
+
+footer p{
+	margin: 0px auto;
+	text-align: center;
+	padding-top: 17px;
 }
