--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,6 +39,7 @@ header {
 	padding: 10px;
 	color: #563f46;
 	margin-top: 5%;
+/*	border: 2px solid black;*/
 }
 
 .nav li a:link, .nav li a:visited {
@@ -64,18 +65,18 @@ header {
 	background: url('../images/wood.jpg') no-repeat;
 	background-size: 100%
 	width: 100%;
-	height: 1000px;
+	height: 1200px;
 	margin: auto;
 	margin-top: 90px;
 
 }
 
 .box1 {
-	width: 50%;
+	width: 60%;
 /*	height: 300px;*/
 	border: 2px solid #563f46;
 	float: left;
-	margin: 5%;
+	margin: 4%;
 	background-color: rgba(255,255,255,0.7);
 	color: #563f46;
 	padding: 5px;
@@ -96,21 +97,20 @@ header {
 	padding: 10px;
 }
 
-.box1 p {
-	display: inline;
+.box1 .bio {
 	font-size: 20px;
-	padding: 10px;
+	margin-top: 50px;
 }
 
 .box2 {
-	width: 25%;
+	width: 20%;
 /*	height: 200px;*/
 	border: 2px solid #563f46;
 	float: right;
 	background-color: rgba(255,255,255,0.7);
 	color: #563f46;
 	float: right;
-	margin: 5%;
+	margin: 4%;
 }
 
 .box2 h1 {
@@ -137,4 +137,39 @@ footer p{
 	margin: 0px auto;
 	text-align: center;
 	padding-top: 17px;
+}
+
+/*CONTACT PAGE*/
+
+.contact {
+	display: block;
+}
+
+form {
+	padding-left: 5%;
+}
+
+.form-font{
+	font-size: 20px;
+}
+
+form p {
+	display: block;
+}
+
+form button {
+	background-color: #563f46;
+	color: white;
+	padding: 15px;
+	margin: 5px;
+}
+
+
+/*CONTACT*/
+
+.portfolio-pic {
+	width: 75%;
+	margin: 0px auto;
+	display: block;
+	margin-bottom: 20px;
 }
