--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@
 
 header {
 	background-color: #c8c3cc;
-/*	height: 100px;*/
+	height: 130px;
 	width:100%;
 	position: fixed;
 	top: 0px;
@@ -25,6 +25,8 @@ header {
     text-align: center;
     font-size: 33px;
     overflow: hidden;
+    position: relative;
+    height: 100%;
 }
 
 .nav {
@@ -67,7 +69,7 @@ header {
 	width: 100%;
 	height: 1200px;
 	margin: auto;
-	margin-top: 90px;
+	margin-top: 134px;
 
 }
 
