--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,12 +19,14 @@ header {
     color: white;
     float: left;
     margin-left: 5%;
-    position: fixed;
+/*    position: fixed;*/
     margin-top: 0px;
     padding: 27px;
     text-align: center;
     font-size: 33px;
     overflow: hidden;
+    position: absolute;
+    height: 100%;
 }
 
 .nav {
