--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,10 +2,13 @@
 	font-family: 'Rokkitt', serif;
 }
 
+body {
+	width:960px;
+}
+
 header {
 	background-color: #c8c3cc;
-/*	height: 100px;*/
-	width:100%;
+	width:960px;
 	position: fixed;
 	top: 0px;
 	border-bottom: 5px solid #563f46;
@@ -13,13 +16,11 @@ header {
 }
 
 .headbox {
-/*	height: 46px;*/
-    width: 20%;
+    width: 25%;
     background-color: #484f4f;
     color: white;
     float: left;
     margin-left: 5%;
-/*    position: fixed;*/
     margin-top: 0px;
     padding: 27px;
     text-align: center;
@@ -33,15 +34,13 @@ header {
 	list-style: none;
 	float: right;
 	margin-right: 5%;
-	font-size: 19px;
+	font-size: 21px;
 }
 
 .nav li {
 	display: inline-block;
 	padding: 10px;
 	color: #563f46;
-	margin-top: 5%;
-/*	border: 2px solid black;*/
 }
 
 .nav li a:link, .nav li a:visited {
@@ -65,23 +64,20 @@ header {
 
 .container {
 	background: url('../images/wood.jpg') no-repeat;
-	background-size: 100%
 	width: 100%;
 	height: 1200px;
-	margin: auto;
 	margin-top: 90px;
 
 }
 
 .box1 {
-	width: 60%;
-/*	height: 300px;*/
+	width: 591px;
 	border: 2px solid #563f46;
 	float: left;
-	margin: 4%;
 	background-color: rgba(255,255,255,0.7);
 	color: #563f46;
 	padding: 5px;
+	margin:50px 15px 0 30px;
 }
 
 .box1 h1 {
@@ -105,14 +101,13 @@ header {
 }
 
 .box2 {
-	width: 20%;
-/*	height: 200px;*/
+	width: 201px;
 	border: 2px solid #563f46;
-	float: right;
 	background-color: rgba(255,255,255,0.7);
 	color: #563f46;
 	float: right;
-	margin: 4%;
+	margin: 50px 30px 0 15px;
+	padding: 5px;
 }
 
 .box2 h1 {
@@ -123,8 +118,7 @@ header {
 }
 
 .icon {
-	display: inline: block;
-	width: 25%;
+	width: 24%;
 	margin: 3.5%;
 }
 
@@ -166,6 +160,15 @@ form button {
 	margin: 5px;
 }
 
+a span {
+	background-color: rgba(140,163,163,0.9);
+	color: white;
+    bottom: 516px;
+    left: 55px;
+    width: 268px;
+    text-align: center;
+}
+
 
 /*PORTFOLIO*/
 
@@ -175,11 +178,9 @@ td {
 }
 
 .portfolio-pic {
-	width: 75%;
-	margin: 0px auto;
-	display: block;
-	margin-bottom: 20px;
-	position: relative;
+	margin: 7px;
+	height: 67%;
+
 }
 
 a span {
