--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,29 +3,28 @@
 }
 
 body {
+	background-color: #563f46;
+}
+
+.content {
 	width:960px;
+	margin: 0px auto;
 }
 
 header {
 	background-color: #c8c3cc;
-<<<<<<< HEAD
-	height: 130px;
-	width:100%;
-=======
+	height: 100px;
 	width:960px;
->>>>>>> gh-pages
 	position: fixed;
 	top: 0px;
 	border-bottom: 5px solid #563f46;
 	overflow: hidden;
+	z-index: 20;
 }
 
 .headbox {
-<<<<<<< HEAD
     width: 20%;
-=======
     width: 25%;
->>>>>>> gh-pages
     background-color: #484f4f;
     color: white;
     float: left;
@@ -35,12 +34,13 @@ header {
     text-align: center;
     font-size: 33px;
     overflow: hidden;
-<<<<<<< HEAD
     position: relative;
-=======
     position: absolute;
->>>>>>> gh-pages
     height: 100%;
+}
+
+header h1 {
+	margin-top: 0px;
 }
 
 .nav {
@@ -52,12 +52,10 @@ header {
 
 .nav li {
 	display: inline-block;
-	padding: 10px;
+	padding: 15px;
 	color: #563f46;
-<<<<<<< HEAD
-	margin-top: 5%;
-=======
->>>>>>> gh-pages
+	margin-top: 0px;
+
 }
 
 .nav li a:link, .nav li a:visited {
@@ -73,8 +71,6 @@ header {
 .nav li a:active {
 	color: #563f46;
 	font-weight: bold;
-	background-color:#8ca3a3;
-	border: 1px solid #563f46;
 }
 
 
@@ -82,14 +78,9 @@ header {
 .container {
 	background: url('../images/wood.jpg') no-repeat;
 	width: 100%;
-	height: 1200px;
-<<<<<<< HEAD
+	height: 1000px;
 	margin: auto;
-	margin-top: 134px;
-=======
-	margin-top: 90px;
->>>>>>> gh-pages
-
+	margin-top: 100px;
 }
 
 .box1 {
@@ -99,7 +90,7 @@ header {
 	background-color: rgba(255,255,255,0.7);
 	color: #563f46;
 	padding: 5px;
-	margin:50px 15px 0 30px;
+	margin:50px 15px 0 30px
 }
 
 .box1 h1 {
@@ -194,7 +185,7 @@ a span {
 
 /*PORTFOLIO*/
 
-td {
+/*td {
 	width: 25%;
 	height: 300px;
 }
@@ -207,4 +198,34 @@ td {
 
 a span {
 	position: absolute;
+}*/
+
+.portfolio-container {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: space-around;
+	align-content: space-around;
+	margin-top: 40px;
+}
+
+.portfolio-pic {
+	height: 100%;
+	width: 260px;
+	padding: 2px;
+	text-decoration: none;
+}
+
+
+.portfolio-pic p{
+    position: relative;
+    bottom: 60px;
+    background-color: rgba(140,163,163, 0.9);
+    color: white;
+    font-size: 25px;
+    padding: 2px;
+    margin: 2px;
+    width: 98%;
+    text-align: center;
+    z-index: 1;
 }
