--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,15 +1,18 @@
+/*STYLES CONTENT/BACKGROUND*/
+
 * {
 	font-family: 'Rokkitt', serif;
 }
-
 body {
 	background-color: #563f46;
 }
-
 .content {
 	width:960px;
 	margin: 0px auto;
 }
+
+
+/*HEADER*/
 
 header {
 	background-color: #c8c3cc;
@@ -19,9 +22,7 @@ header {
 	top: 0px;
 	border-bottom: 5px solid #563f46;
 	overflow: hidden;
-	z-index: 20;
-}
-
+	z-index: 20;}
 .headbox {
     width: 20%;
     width: 25%;
@@ -38,10 +39,12 @@ header {
     position: absolute;
     height: 100%;
 }
-
 header h1 {
 	margin-top: 0px;
 }
+
+/*NAVBAR*/
+
 
 .nav {
 	list-style: none;
@@ -74,6 +77,8 @@ header h1 {
 }
 
 
+/*MAIN CONTENT*/
+
 
 .container {
 	background: url('../images/wood.jpg') no-repeat;
@@ -82,6 +87,8 @@ header h1 {
 	margin: auto;
 	margin-top: 100px;
 }
+
+/*box setup*/
 
 .box1 {
 	width: 591px;
@@ -92,7 +99,6 @@ header h1 {
 	padding: 5px;
 	margin:50px 15px 0 30px
 }
-
 .box1 h1 {
 	margin: 0px auto;
 	text-align: center;
@@ -100,18 +106,8 @@ header h1 {
 	margin-top:5px;
 }
 
-#profile-pic {
-	height: 300px;
-	width: 300px;
-	display: inline;
-	float: left;
-	padding: 10px;
-}
 
-.box1 .bio {
-	font-size: 20px;
-	margin-top: 50px;
-}
+/*SOCIAL MEDIA BOX*/
 
 .box2 {
 	width: 201px;
@@ -122,57 +118,71 @@ header h1 {
 	margin: 50px 30px 0 15px;
 	padding: 5px;
 }
-
 .box2 h1 {
 	margin: 0px auto;
 	text-align: center;
 	font-size: 26px;
 	margin-top: 5px;
 }
-
 .icon {
 	width: 24%;
 	margin: 3.5%;
 }
+
+
+/*FOOTER*/
 
 footer {
 	background-color: #c8c3cc;
 	height: 50px;
 	width: 100%;
 	border-top: 3px solid #563f46;
+	position: fixed;
+	bottom: 0;
+	width: 960px;
 }
-
 footer p{
 	margin: 0px auto;
 	text-align: center;
 	padding-top: 17px;
 }
 
+
+/*PROFILE PAGE*/
+
+#profile-pic {
+	height: 250px;
+	width: 250px;
+	display: inline;
+	float: left;
+	padding: 10px;
+	margin-right: 20px
+}
+.box1 .bio {
+	font-size: 22px;
+}
+
+
 /*CONTACT PAGE*/
 
 .contact {
 	display: block;
 }
-
 form {
 	padding-left: 5%;
 }
-
 .form-font{
-	font-size: 20px;
+	font-size: 22px;
 }
-
 form p {
 	display: block;
 }
-
 form button {
 	background-color: #563f46;
 	color: white;
 	padding: 15px;
 	margin: 5px;
 }
-
 a span {
 	background-color: rgba(140,163,163,0.9);
 	color: white;
@@ -185,20 +195,6 @@ a span {
 
 /*PORTFOLIO*/
 
-/*td {
-	width: 25%;
-	height: 300px;
-}
-
-.portfolio-pic {
-	margin: 7px;
-	height: 67%;
-
-}
-
-a span {
-	position: absolute;
-}*/
 
 .portfolio-container {
 	display: flex;
@@ -208,15 +204,12 @@ a span {
 	align-content: space-around;
 	margin-top: 40px;
 }
-
 .portfolio-pic {
 	height: 100%;
 	width: 260px;
 	padding: 2px;
 	text-decoration: none;
 }
-
-
 .portfolio-pic p{
     position: relative;
     bottom: 60px;
